[Settings][7/N] Run Code Formatter on Handoff Code
Run code formatter on code in the handoff/ directory

Flag: android.companion.enable_task_continuity
Bug: 400970610
Test: Added Unit Tests

Change-Id: Id75b6f7d76a866b94ba133a0f4e1a27ae0b47c80